# K-wire-2-vst

./: .gitignore  CMakeLists.txt  README.md
includes/: CustomParameter.h  Distortion.h  LookupTable.h  ParamPointQueue.h  TPTFilter.h  TPTSVF.h  constants.h  parameters.h
resource/: Kwire2editor.uidesc  myplugineditor.uidesc
source/: Kwire2cids.h  Kwire2controller.cpp  Kwire2controller.h  Kwire2entry.cpp  Kwire2processor.cpp  Kwire2processor.h  myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  version.h
